force-app/main/default/objects/Payment_Plan__c/fields/Bank_Loan_Self_Funded__c.field-meta.xml
<CustomField>
    <fullName>Bank_Loan_Self_Funded__c</fullName>
    <label>Bank Loan/Self Funded</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Loan</fullName>
            </value>
            <value>
                <fullName>Self Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>