force-app/main/default/objects/Payment_Plan__c/fields/Default_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Payment Plan</label>
    <type>Checkbox</type>
</CustomField>