force-app/main/default/objects/Payment_Plan__c/fields/Special_Brokerage_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Special_Brokerage_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Brokerage Scheme</label>
    <type>Checkbox</type>
</CustomField>