force-app/main/default/objects/Payment_Plan__c/fields/Special_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Special_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Payment Plan</label>
    <type>Checkbox</type>
</CustomField>