force-app/main/default/objects/Payment_Plan__c/fields/Sub_Vention__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Vention</label>
    <type>Checkbox</type>
</CustomField>