force-app/main/default/objects/Payment_Plan__c/fields/Subvention_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Subvention_Base_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Subvention Base Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>