force-app/main/default/objects/Payment_Plan__c/fields/Unique_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Plan_Code__c</fullName>
    <label>Unique Plan Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>