force-app/main/default/objects/Payment_Plan__c/fields/Valid_upto__c.field-meta.xml
<CustomField>
    <fullName>Valid_upto__c</fullName>
    <label>Valid upto</label>
    <type>Date</type>
</CustomField>