force-app/main/default/objects/Payment_Plan__c/fields/Valid_Upto_check__c.field-meta.xml
<CustomField>
    <fullName>Valid_Upto_check__c</fullName>
    <formula>IF( Valid_upto__c  &gt;= TODAY(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>