force-app/main/default/objects/Payment_Plan__c/validationRules/Name_should_not_contains_colon.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_should_not_contains_colon</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS( Name , &apos;:&apos;)</errorConditionFormula>
    <errorMessage>Name should not contain colon symbol</errorMessage>
</ValidationRule>